Updated backend to work with both local and production environments.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ flask = "*"
 flask-cors = "*"
 flask-restx = "*"
 flask-testing = "*"
+google-cloud = "*"
+google-cloud-secret-manager = "*"
+gunicorn = "*"
 pyrebase4 = "*"
 pytest = "*"
 python-dotenv = "*"
