Added image analysis during upload (might change to separate Cloud Run Function for async running). Also added line in gitignore for admin private key.

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,8 @@ pytest = "*"
 python-dotenv = "*"
 setuptools = "*"
 google-cloud-firestore = "*"
+google-cloud-vision = "*"
+google-cloud-aiplatform = "*"
 
 [dev-packages]
 
