Updated prod to use firebase admin creds so now its used in both local and prod.

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ setuptools = "*"
 google-cloud-firestore = "*"
 google-cloud-vision = "*"
 google-cloud-aiplatform = "*"
+google-cloud-storage = "*"
 
 [dev-packages]
 
